@@ -73,6 +73,9 @@ Trunk -  Unreleased
     HIVE-763. getSchema returns invalid column names, getThriftSchema does
     not return old style string schemas (John Sichi via namit)
 
+    HIVE-1102. make number of concurrent tasks configurable
+    (He Yongqiang via namit)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
